--- a/src/components/inspector.less
+++ b/src/components/inspector.less
@@ -14,12 +14,12 @@
   .pl-inspector-header {
     flex-shrink: 0;
     padding: @padding-smaller;
-    border-bottom: 1px solid @black-faded-dark;
+    border-bottom: 1px solid @shadow-dark;
     background-color: @gray;
     input[type="text"] {
       padding: @padding-smaller @padding-small;
       border-radius: @border-radius-small;
-      box-shadow: inset 0 0 0 1px @black-faded-dark;
+      box-shadow: inset 0 0 0 1px @shadow-dark;
       background-color: @gray-darker;
       &:focus {
         background-color: mix(@gray-dark, @gray-darker);
