Tweak sidebar colors

--- a/src/components/inspector.less
+++ b/src/components/inspector.less
@@ -15,6 +15,7 @@
     flex-shrink: 0;
     padding: @padding-smaller;
     border-bottom: 1px solid @shadow-dark;
+    background: linear-gradient(transparent, @gray);
     input[type="text"] {
       padding: @padding-smaller @padding-small;
       border-radius: @border-radius-small;
@@ -28,7 +29,6 @@
   .pl-inspector-properties {
     flex-grow: 1;
     padding: @padding-base;
-    background-color: @shadow;
     overflow: auto;
     .pl-inspector-property {
       position: relative;
