--- a/src/components/inspector.less
+++ b/src/components/inspector.less
@@ -5,11 +5,7 @@
   input[type="text"], input[type="number"] {
     width: 100%;
     border: none;
-    color: @gray-lightest;
     outline: none;
-    &:focus {
-      color: white;
-    }
   }
   .pl-inspector-header {
     flex-shrink: 0;
@@ -19,10 +15,10 @@
     input[type="text"] {
       padding: @padding-smaller @padding-small;
       border-radius: @border-radius-small;
-      box-shadow: inset 0 0 0 1px @shadow-dark;
-      background-color: @gray-darker;
+      box-shadow: 0 0 0 1px @shadow-dark;
+      background-color: @gray-lightest;
       &:focus {
-        background-color: mix(@gray-dark, @gray-darker);
+        background-color: white;
       }
     }
   }
@@ -52,10 +48,12 @@
         font-family: @font-family-monospace;
         font-size: @padding-large;
         line-height: 1em;
+        color: @gray-lightest;
         text-align: right;
         background: none;
         position: relative;
         &:focus {
+          color: white;
           ~ label {
             color: @brand-primary;
           }
@@ -80,6 +78,19 @@
         transition: opacity @transition-duration-medium ease-in-out,
             transform @transition-duration-medium ease-in-out;
       }
+    }
+  }
+  .pl-inspector-empty {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0 @padding-base;
+    color: @gray-lighter;
+    h4 {
+      color: @gray-lightest;
     }
   }
 }
