--- a/src/main.less
+++ b/src/main.less
@@ -10,6 +10,10 @@ body {
   overflow: hidden;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
 .pl-ellipsized {
   white-space: nowrap;
   overflow: hidden;
