Hook up drag-n-drop asset uploads

--- a/src/components/sidebar.less
+++ b/src/components/sidebar.less
@@ -8,6 +8,7 @@
   border-right: 1px solid @shadow-dark;
   position: relative;
   .pl-sidebar-tabs {
+    flex-shrink: 0;
     padding: @padding-smaller;
     padding-bottom: 0;
     background-color: @gray-darker;
