--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -54,6 +54,7 @@
       margin: @timeline-track-padding;
       cursor: pointer;
       position: relative;
+      z-index: 0;
       &:before {
         content: '';
         height: 50%;
