--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -31,7 +31,7 @@
         margin-right: @padding-smaller;
         padding: 0 @padding-small;
         border-radius: @border-radius-small;
-        box-shadow: @button-shadow;
+        box-shadow: inset 0 1px @highlight, inset 0 -1px @shadow, 0 0 0 1px @shadow-dark;
         font-family: @font-family-monospace;
         line-height: @padding-larger;
         background: linear-gradient(lighten(@brand-warning, 10%) 50%, @brand-warning 50%, darken(@brand-warning, 10%));
