--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -128,7 +128,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 @padding-base;
+      padding: 0 @padding-small;
       margin-bottom: @padding-small;
       font-size: @font-size-small;
       line-height: @padding-base;
