Move asset thumb into its own section

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -73,12 +73,12 @@
         width: 100%;
         height: 25%;
         position: absolute;
-        bottom: 0;
+        bottom: 50%;
         left: 0;
         .pl-timeline-header-track-tick {
           width: 1px;
           height: 100%;
-          background-color: black;
+          background-color: @gray-lightest;
           &:last-child {
             margin-right: -1px;
           }
