Lay out the library panel

--- a/src/components/inspector.less
+++ b/src/components/inspector.less
@@ -33,8 +33,9 @@
       }
 
       label {
-        font-size: @font-size-small;
-        line-height: @padding-large;
+        .pl-spaced;
+        font-size: @font-size-smaller;
+        line-height: @padding-base;
         color: @gray-lighter;
         position: absolute;
         bottom: @padding-smallest;
