--- a/src/variables.less
+++ b/src/variables.less
@@ -6,10 +6,10 @@
 @gray-lighter: lighten(black, 45%);
 @gray-lightest: lighten(black, 70%);
 
+@shadow-light: fade(black, 10%);
 @shadow: fade(black, 20%);
 @shadow-dark: fade(black, 50%);
-@shadow-darker: fade(black, 80%);
 
+@highlight-light: fade(white, 5%);
 @highlight: fade(white, 10%);
-@highlight-light: fade(white, 20%);
-@hightlight-lighter: fade(white, 50%);
+@highlight-dark: fade(white, 25%);
