--- a/src/components/library.less
+++ b/src/components/library.less
@@ -45,6 +45,7 @@
   }
   .pl-library-header, .pl-library-assets .pl-library-asset {
     display: flex;
+    align-items: center;
     span {
       display: block;
       width: 50%;
@@ -99,6 +100,7 @@
         .pl-ellipsized;
       }
       .pl-icon {
+        height: @font-size-small;
         fill: @gray-lightest;
         &:hover {
           fill: white;
