--- a/src/components/viewport.less
+++ b/src/components/viewport.less
@@ -6,6 +6,10 @@
   background-color: white;
   overflow: hidden;
   position: relative;
+  &.pl-dragging {
+    box-shadow: inset 0 0 0 3px @brand-primary, @box-shadow-large;
+  }
+
   .pl-viewport-layer {
     border: 1px solid transparent;
     position: absolute;
