Move viewport dragging class to outside

--- a/src/components/viewport.less
+++ b/src/components/viewport.less
@@ -7,7 +7,7 @@
   overflow: hidden;
   position: relative;
   &.pl-dragging {
-    box-shadow: inset 0 0 0 3px @brand-primary, @box-shadow-large;
+    box-shadow: 0 0 0 3px @brand-primary, @box-shadow-large;
   }
 
   .pl-viewport-layer {
