--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -1,9 +1,8 @@
-@import (reference) './button';
-@import (reference) './sidebar';
+@import (reference) './library';
+@import './layer';
 
 @timeline-playhead-handle-size: 18px;
 @timeline-playhead-arrow-size: @timeline-playhead-handle-size / 2;
-@timeline-track-padding: 0 @padding-small;
 
 .pl-timeline {
   display: flex;
@@ -13,20 +12,18 @@
   border-top: 1px solid @gray;
   background-color: @gray-dark;
   position: relative;
-  .pl-timeline-header .pl-timeline-header-status, .pl-timeline-layers {
-    flex-shrink: 0;
-    width: @sidebar-width;
-  }
   .pl-timeline-header {
     display: flex;
     flex-shrink: 0;
     border-bottom: 1px solid black;
-    .pl-timeline-header-status {
+    .pl-timeline-header-control {
       display: flex;
+      flex-shrink: 0;
+      width: @library-width;
       padding: @padding-smaller;
       border-right: 1px solid @shadow-dark;
       font-family: @font-family-monospace;
-      .pl-timeline-header-status-indicator {
+      .pl-timeline-header-control-indicator {
         flex-grow: 1;
         margin-right: @padding-smaller;
         padding: 0 @padding-small;
@@ -38,7 +35,7 @@
         overflow: hidden;
         position: relative;
       }
-      .pl-timeline-header-status-add {
+      .pl-timeline-header-control-add {
         flex-shrink: 0;
         position: relative;
         .pl-icon {
@@ -51,7 +48,7 @@
     }
     .pl-timeline-header-track {
       flex-grow: 1;
-      margin: @timeline-track-padding;
+      margin: 0 @padding-small;
       cursor: pointer;
       position: relative;
       &:before {
@@ -117,147 +114,32 @@
     display: flex;
     flex-grow: 1;
     background-color: @gray-darker;
-    overflow: auto;
     position: relative;
+    z-index: 0;
   }
   .pl-timeline-layers {
-    padding-top: @padding-small;
-    .pl-timeline-layer {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-      padding: 0 @padding-small;
-      margin-bottom: @padding-small;
-      font-size: @font-size-small;
-      line-height: @padding-base;
-      color: @gray-lightest;
-      cursor: pointer;
-      &:hover {
-        color: mix(@gray-lightest, white);
-      }
-      &.pl-selected {
-        color: white;
-      }
-      &:not(.pl-selected) .pl-timeline-layer-actions {
-        opacity: 0.5;
-      }
-      &.pl-hidden .pl-timeline-layer-name {
-        text-decoration: line-through;
-        opacity: 0.5;
-      }
-
-      .pl-timeline-layer-name {
-        .pl-ellipsized;
-        flex-grow: 1;
-      }
-      .pl-timeline-layer-actions {
-        display: flex;
-        align-items: center;
-        flex-shrink: 0;
-        .pl-timeline-layer-action {
-          margin-left: @padding-small;
-          cursor: pointer;
-          &:hover .pl-icon {
-            fill: white;
-          }
-
-          .pl-icon {
-            fill: @gray-lightest;
-          }
-        }
-      }
-      .pl-timeline-layer-properties {
-        width: 100%;
-        .pl-timeline-layer-property {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          margin-top: @padding-smaller;
-          font-size: @font-size-smaller;
-          line-height: @font-size-smaller;
-          position: relative;
-          .pl-timeline-layer-property-animate {
-            width: @font-size-smaller;
-            height: @font-size-smaller;
-            border-radius: 50%;
-            background-color: @gray-light;
-            &.pl-active {
-              background-color: @brand-error;
-            }
-          }
-        }
-      }
-    }
+    flex-grow: 1;
+    overflow: auto;
   }
-  .pl-timeline-tracks {
-    display: flex;
-    min-height: 100%;
-    padding: @timeline-track-padding;
-    box-shadow: -1px 0 @shadow-dark;
-    overflow: hidden;
+  .pl-timeline-track {
     position: absolute;
     top: 0;
-    left: @sidebar-width;
-    right: 0;
-    .pl-timeline-tracks-wrapper {
-      flex-grow: 1;
-      padding-top: @padding-small;
-      position: relative;
+    left: @library-width + @padding-small;
+    right: @padding-small;
+    bottom: 0;
+    &:before {
+      content: '';
+      width: 1px;
+      height: 100%;
+      margin-left: -1px;
+      background-color: @shadow-dark;
+      position: absolute;
+      top: 0;
+      left: @padding-small * -1;
     }
-    .pl-timeline-track {
-      min-height: @padding-base;
-      margin-bottom: @padding-small;
-      position: relative;
-      .pl-timeline-track-bar {
-        height: @padding-base;
-        border-radius: @border-radius-small;
-        box-shadow: 0 1px 1px @shadow-dark;
-        background-color: @gray-light;
-        cursor: pointer;
-        position: absolute;
-        top: 0;
-        left: 0;
-        &:hover {
-          background-color: mix(@gray-light, @gray-lightest);
-        }
-        &:active, &.pl-selected {
-          background-color: @gray-lightest;
-        }
-        &.pl-hidden {
-          opacity: 0.5;
-        }
 
-        .pl-timeline-track-bar-handle {
-          width: 5px;
-          height: 100%;
-          cursor: ew-resize;
-          position: absolute;
-          top: 0;
-          left: 0;
-          transform: translateX(-50%);
-          &:last-child {
-            left: 100%;
-          }
-        }
-      }
-      .pl-timeline-track-properties {
-        padding-top: @padding-base;
-        .pl-timeline-track-property {
-          height: @font-size-smaller;
-          margin-top: @padding-smaller;
-          position: relative;
-          .pl-timeline-track-property-keyframe {
-            width: @font-size-smaller / 2;
-            height: @font-size-smaller / 2;
-            box-shadow: @box-shadow-small;
-            background-color: @gray-lightest;
-            position: absolute;
-            top: 50%;
-            transform: translate(-50%, -50%) rotate(45deg);
-          }
-        }
-      }
+    .pl-timeline-marker {
+      z-index: 1;
     }
   }
   .pl-timeline-marker, .pl-timeline-handle {
@@ -269,6 +151,7 @@
     width: 1px;
     height: 100%;
     background-color: @brand-warning;
+    pointer-events: none;
   }
   .pl-timeline-handle {
     width: 100%;
