--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -39,6 +39,8 @@
         flex-shrink: 0;
         position: relative;
         .pl-icon {
+          width: @padding-large;
+          height: @padding-large;
           position: absolute;
           top: 50%;
           left: 50%;
