Make property panel fields editable

--- a/src/main.less
+++ b/src/main.less
@@ -3,6 +3,7 @@
 
 @import './components/button';
 @import './components/icon';
+@import './components/text-field';
 @import './components/app';
 
 body {
