--- a/src/components/layer.less
+++ b/src/components/layer.less
@@ -62,6 +62,29 @@
         margin-bottom: @padding-smaller;
       }
 
+      .pl-text-field {
+        padding-left: @padding-smaller;
+        box-shadow: 0 1px @gray-light;
+        position: relative;
+        &:before {
+          content: '';
+          width: 100%;
+          height: 1px;
+          background-color: @brand-primary;
+          position: absolute;
+          top: 100%;
+          left: 0;
+          transform: scaleX(0);
+          transform-origin: right bottom;
+          transition: transform @transition-duration-medium ease-in;
+        }
+        &:focus {
+          background-color: @shadow;
+          &:before {
+            transform: scaleX(1);
+          }
+        }
+      }
       .pl-layer-property-keyframe {
         width: @font-size-smaller / 1.5;
         height: @font-size-smaller / 1.5;
