Add immutable properties to property list

--- a/src/components/control.less
+++ b/src/components/control.less
@@ -34,7 +34,7 @@
       .pl-icon {
         width: @padding-base;
         height: @padding-base;
-        fill: @gray;
+        fill: @gray-light;
       }
     }
   }
