--- a/src/components/layer.less
+++ b/src/components/layer.less
@@ -62,6 +62,9 @@
         margin-bottom: @padding-smaller;
       }
 
+      .pl-control span {
+        color: @gray-light;
+      }
       .pl-text-field {
         padding-left: @padding-smaller;
         box-shadow: 0 1px @gray-light;
