--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -1,5 +1,5 @@
 @import (reference) './library';
-@import './layer';
+@import './timeline-layer';
 
 @timeline-playhead-handle-size: 18px;
 @timeline-playhead-arrow-size: @timeline-playhead-handle-size / 2;
