Make property control font size smaller

--- a/src/components/timeline-layer.less
+++ b/src/components/timeline-layer.less
@@ -62,8 +62,11 @@
         margin-bottom: @padding-smaller;
       }
 
-      .pl-control span {
-        color: @gray-light;
+      .pl-control {
+        font-size: @font-size-smaller;
+        span {
+          color: @gray-light;
+        }
       }
       .pl-text-field {
         padding-left: @padding-smaller;
